# vibervn-context-engine

./: Cargo.toml  LICENSE  README.md
scripts/: phase2_bench.sh
src/: chat.rs  config.rs  lib.rs  main.rs  mcp.rs  server.rs
src/assets/: index.html
src/embedding/: cache.rs  mod.rs  voyage.rs
src/indexing/: mod.rs  pipeline.rs  walker.rs
src/llm/: google.rs  mod.rs  openai.rs
src/parsing/: mod.rs
src/query/: engine.rs  graph_expand.rs  merger.rs  reranker.rs
src/store/: mod.rs  ops.rs  schema.rs
tests/: integration.rs  repro_notepad.rs
