[package]
name = "context-engine-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
tempfile = "3"
anyhow = "1"
surrealdb = { version = "2", default-features = false, features = ["kv-surrealkv"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1"
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server"] }
tokio-util = "0.7"
schemars = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
